<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sahinbay.voice.MainActivity">

    <ToggleButton
        android:id="@+id/whitenoisebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/whiteToggleButtonOff"
        android:textOn="@string/whiteToggleButtonOn"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="247dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ToggleButton
        android:id="@+id/pinknoisebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button"
        android:textOff="@string/pinkToggleButtonOff"
        android:textOn="@string/pinkToggleButtonOn"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="247dp"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/brownnoisebutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:id="@+id/brownnoisebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/whitenoisebutton"
        android:layout_marginTop="44dp"
        android:text="Button"
        android:textOff="@string/brownToggleButtonOff"
        android:textOn="@string/brownToggleButtonOn"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="247dp" />

    <SeekBar
        android:id="@+id/whiteVolumeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="80"
        android:layout_below="@+id/pinknoisebutton"
        android:layout_marginTop="62dp" />
    <SeekBar
        android:id="@+id/brownVolumeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whiteVolumeSeekBar"
        android:layout_marginTop="62dp" />
    <SeekBar
        android:id="@+id/pinkVolumeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/brownVolumeSeekBar"
        android:layout_marginTop="62dp" />

</RelativeLayout>